WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226322
Non-unified build fixes, late May 2021 edition
https://bugs.webkit.org/show_bug.cgi?id=226322
Summary
Non-unified build fixes, late May 2021 edition
Adrian Perez
Reported
2021-05-27 03:10:10 PDT
🎼️ It's my party, and I'll cry if I want to Cry if I want to, cry if I want to You would cry too if it happened to you 🎵️
Attachments
Patch
(6.62 KB, patch)
2021-05-27 03:43 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2021-05-27 03:43:24 PDT
Created
attachment 429866
[details]
Patch
EWS
Comment 2
2021-05-27 05:30:22 PDT
Committed
r278162
(
238206@main
): <
https://commits.webkit.org/238206@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429866
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-05-27 05:31:20 PDT
<
rdar://problem/78564576
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug